<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">

    <string name="radio1Title">KEXP</string>
    <string name="radio1URL">https://kexp-mp3-128.streamguys1.com/kexp128.mp3</string>
    <string name="radio2Title">XRay FM</string>
    <string name="radio2URL">http://listen.xray.fm:8000/stream</string>
    <string name="radio3Title">WWOZ</string>
    <string name="radio3URL">https://wwoz-sc.streamguys1.com/wwoz-hi.mp3</string>

    <string name="permissionRequest">We need the permission to monitor the status of the phone " +
                    "and turn off the radio during a phone conversation</string>


    <string name="app_name">My Radio\u0020</string>
    <string name="playingRadio">playingRadio</string>
    <string name="isConnected">\u0020is connected</string>
    <string name="isStopped">\u0020is stopped</string>
    <string name="internetRestored">Internet connection restored via\u0020</string>
    <string name="internetLost">Internet connection lost!</string>
    <string name="exit">Exit</string>
    <string name="aboutToEdit">About app and Edit</string>

    <string name="app_name_about">My Radio - About App</string>
    <string name="about">About App</string>
    <string name="aboutEdit">To edit click on radio station</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="uri">Uri</string>
    <string name="databaseUnavailable">Database unavailable</string>

    <string name="app_name_about_edit">My Radio - About App - Edit</string>
    <string name="editRadio">Edit Radio Station</string>
    <string name="inputTitle">Radio Title</string>
    <string name="inputURL">Direct link to radio stream</string>
    <string name="save">Save</string>
    <string name="newRadioSaved">New Radio Station saved</string>
    <string name="urlOrTitleIsEmpty">Please input direct link and/or new title</string>
    <string name="urlNotValid">URL is not valid</string>

    <string name="onExit">Turn me on again when you want!</string>
</resources>
