<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/editRadioStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/editRadio"
            android:textColor="@color/gold"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/editRadioTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/inputTitle"
            android:layout_below="@+id/editRadioStation"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="start"
            android:labelFor="@id/enterTitle"/>

        <EditText
            android:id="@+id/enterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_below="@+id/editRadioTitle"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="text"
            android:textSize="20sp"
            android:ems="10"
            />

        <TextView
            android:id="@+id/editRadioUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/inputURL"
            android:layout_below="@+id/enterTitle"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="start"
            android:labelFor="@id/enterUri"/>

        <EditText
            android:id="@+id/enterUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_below="@+id/editRadioUri"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="textUri"
            android:ems="10"

            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterUri"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/save"
            android:textSize="20sp"/>





    </RelativeLayout>
</ScrollView>